@@ -48,6 +48,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Iterator
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|List
 import|;
 end_import
@@ -443,17 +453,40 @@ range|:
 name|children
 control|)
 block|{
-operator|(
-operator|(
-name|QueryNodeImpl
-operator|)
 name|child
-operator|)
 operator|.
-name|setParent
+name|removeFromParent
+argument_list|()
+expr_stmt|;
+block|}
+name|ArrayList
+argument_list|<
+name|QueryNode
+argument_list|>
+name|existingChildren
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|QueryNode
+argument_list|>
 argument_list|(
-literal|null
+name|getChildren
+argument_list|()
 argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|QueryNode
+name|existingChild
+range|:
+name|existingChildren
+control|)
+block|{
+name|existingChild
+operator|.
+name|removeFromParent
+argument_list|()
 expr_stmt|;
 block|}
 comment|// allocate new children list
@@ -461,20 +494,11 @@ name|allocate
 argument_list|()
 expr_stmt|;
 comment|// add new children and set parent
-for|for
-control|(
-name|QueryNode
-name|child
-range|:
-name|children
-control|)
-block|{
 name|add
 argument_list|(
-name|child
+name|children
 argument_list|)
 expr_stmt|;
-block|}
 block|}
 annotation|@
 name|Override
@@ -635,9 +659,16 @@ literal|null
 return|;
 block|}
 return|return
+operator|new
+name|ArrayList
+argument_list|<
+name|QueryNode
+argument_list|>
+argument_list|(
 name|this
 operator|.
 name|clauses
+argument_list|)
 return|;
 block|}
 annotation|@
@@ -776,12 +807,27 @@ name|QueryNode
 name|parent
 parameter_list|)
 block|{
+if|if
+condition|(
+name|this
+operator|.
+name|parent
+operator|!=
+name|parent
+condition|)
+block|{
+name|this
+operator|.
+name|removeFromParent
+argument_list|()
+expr_stmt|;
 name|this
 operator|.
 name|parent
 operator|=
 name|parent
 expr_stmt|;
+block|}
 block|}
 annotation|@
 name|Override
@@ -925,6 +971,80 @@ operator|.
 name|clone
 argument_list|()
 return|;
+block|}
+annotation|@
+name|Override
+DECL|method|removeFromParent
+specifier|public
+name|void
+name|removeFromParent
+parameter_list|()
+block|{
+if|if
+condition|(
+name|this
+operator|.
+name|parent
+operator|!=
+literal|null
+condition|)
+block|{
+name|List
+argument_list|<
+name|QueryNode
+argument_list|>
+name|parentChildren
+init|=
+name|this
+operator|.
+name|parent
+operator|.
+name|getChildren
+argument_list|()
+decl_stmt|;
+name|Iterator
+argument_list|<
+name|QueryNode
+argument_list|>
+name|it
+init|=
+name|parentChildren
+operator|.
+name|iterator
+argument_list|()
+decl_stmt|;
+while|while
+condition|(
+name|it
+operator|.
+name|hasNext
+argument_list|()
+condition|)
+block|{
+if|if
+condition|(
+name|it
+operator|.
+name|next
+argument_list|()
+operator|==
+name|this
+condition|)
+block|{
+name|it
+operator|.
+name|remove
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+name|this
+operator|.
+name|parent
+operator|=
+literal|null
+expr_stmt|;
+block|}
 block|}
 block|}
 end_class
