@@ -34,6 +34,16 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collections
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -201,6 +211,118 @@ literal|"tAg"
 argument_list|)
 operator|!=
 literal|null
+argument_list|)
+expr_stmt|;
+block|}
+comment|/* LUCENE-5099 - QueryNodeProcessorImpl should set parent to null before returning on processing */
+DECL|method|testRemoveFromParent
+specifier|public
+name|void
+name|testRemoveFromParent
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|BooleanQueryNode
+name|booleanNode
+init|=
+operator|new
+name|BooleanQueryNode
+argument_list|(
+name|Collections
+operator|.
+expr|<
+name|QueryNode
+operator|>
+name|emptyList
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|FieldQueryNode
+name|fieldNode
+init|=
+operator|new
+name|FieldQueryNode
+argument_list|(
+literal|"foo"
+argument_list|,
+literal|"A"
+argument_list|,
+literal|0
+argument_list|,
+literal|1
+argument_list|)
+decl_stmt|;
+name|assertNull
+argument_list|(
+name|fieldNode
+operator|.
+name|getParent
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|booleanNode
+operator|.
+name|add
+argument_list|(
+name|fieldNode
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|fieldNode
+operator|.
+name|getParent
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|fieldNode
+operator|.
+name|removeFromParent
+argument_list|()
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|fieldNode
+operator|.
+name|getParent
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|booleanNode
+operator|.
+name|add
+argument_list|(
+name|fieldNode
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|fieldNode
+operator|.
+name|getParent
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|booleanNode
+operator|.
+name|set
+argument_list|(
+name|Collections
+operator|.
+expr|<
+name|QueryNode
+operator|>
+name|emptyList
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|fieldNode
+operator|.
+name|getParent
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
